--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "^2.5.4",
     "firebase": "^5.9.2",
+    "node-sass": "^4.12.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.29"
   },
