--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^8.1.2",
+    "@angular/cdk": "^8.1.1",
     "@angular/common": "^7.2.2",
     "@angular/core": "^7.2.2",
     "@angular/fire": "^5.1.2",
     "@angular/forms": "^7.2.2",
     "@angular/http": "^7.2.2",
+    "@angular/material": "^8.1.1",
     "@angular/platform-browser": "^7.2.2",
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
