--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-x-socialsharing": "^5.4.7",
     "core-js": "^2.5.4",
+    "es6-promise-plugin": "^4.2.2",
     "firebase": "^5.9.2",
     "node-sass": "^4.12.0",
     "rxjs": "~6.3.3",
@@ -78,7 +80,10 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-x-socialsharing": {
+        "ANDROID_SUPPORT_V4_VERSION": "24.1.1+"
+      }
     },
     "platforms": [
       "android"
